mdix-go/internal/include/mdix_ffi.h

// Type discriminants returned by mdix_get_type().
// Values are stable — the C# MdixValueType enum MUST match exactly.
// Numeric types are contiguous: Int=2, Long=3, Float=4, Double=5.
enum MdixType {
    MDIX_TYPE_UNKNOWN = -1,
    MDIX_TYPE_NULL = 0,
    MDIX_TYPE_BOOL = 1,
    MDIX_TYPE_INT = 2,
    MDIX_TYPE_LONG = 3,
    MDIX_TYPE_FLOAT = 4,
    MDIX_TYPE_DOUBLE = 5,
    MDIX_TYPE_STRING = 6,
    MDIX_TYPE_DATE = 7,
    MDIX_TYPE_TIMESTAMP = 8,
    MDIX_TYPE_HEX_COLOR = 9,
    MDIX_TYPE_BLOB = 10,
    MDIX_TYPE_REGEX = 11,
    MDIX_TYPE_ARRAY = 12,
    MDIX_TYPE_OBJECT = 13,
    MDIX_TYPE_TUPLE = 14,
    MDIX_TYPE_ENUM = 15,
};
typedef int32_t MdixType;
// Returns a static pointer to the DixScript FFI version string.
// Do NOT pass this pointer to mdix_free_string() — it is a static allocation.
 const char *mdix_version(void) ;
// Load and compile a .mdix source file from disk.
// Returns an opaque handle on success, null on failure (check mdix_get_last_error).
// Caller must free with mdix_free when done.
 void *mdix_load(const char *path) ;
// Compile and load .mdix source from an in-memory string.
// Useful for Unity TextAssets and embedded configs.
// Returns an opaque handle on success, null on failure.
// Caller must free with mdix_free when done.
 void *mdix_load_str(const char *source) ;
// Free a handle created by any mdix_load* function.
// Passing null is safe. Do not call twice on the same pointer.
 void mdix_free(void *handle) ;
// Load an encrypted .mdix.enc file using a .mdix.key file for key resolution.
// Pass null for key_path to auto-detect the key file next to the enc file.
 void *mdix_load_encrypted(const char *enc_path, const char *key_path) ;
// Load an encrypted .mdix.enc file using a password for key derivation.
 void *mdix_load_encrypted_password(const char *enc_path, const char *password) ;
// Load encrypted data from raw bytes with key file content provided as a string.
// Intended for platforms without filesystem access (asset bundles, network delivery).
// Pass null for password if the key file does not use password mode.

void *mdix_load_encrypted_bytes(const uint8_t *encrypted_bytes,
                                int32_t byte_count,
                                const char *key_file_content,
                                const char *password)
;
// Returns true if the handle is non-null (i.e. load succeeded).
 bool mdix_is_valid(const void *handle) ;
// Returns the number of entries in the flat data map, or -1 if handle is null.
 int32_t mdix_entry_count(const void *handle) ;
// Returns true if the source file was encrypted.
 bool mdix_is_encrypted(const void *handle) ;
// Returns true if the source file was compressed.
 bool mdix_is_compressed(const void *handle) ;
// Returns the runtime version string from the loaded DixData.
// Caller must free the returned string with mdix_free_string().
 char *mdix_get_loaded_version(const void *handle) ;
// Returns all keys in the flat data map as a null-terminated C string array.
// Writes the count to out_count. Caller must free with mdix_free_string_array.
// Includes synthetic indexed keys (tags[0], server.host, etc.).
 char **mdix_get_all_keys(const void *handle, int32_t *out_count) ;
// Read a value from the @CONFIG section by key (e.g. "version", "author").
// Returns null if the section is absent or the key does not exist.
// Caller must free the returned string with mdix_free_string().
 char *mdix_get_config_value(const void *handle, const char *key) ;
// Validate .mdix source text without loading the result.
//
// Runs the full compilation pipeline (tokenize → parse → semantic analysis →
// AST enhance → value resolve). Returns true on success; on failure, the
// error detail is available via mdix_get_last_error().
//
// Useful for Unity editor tooling — validate before shipping.
 bool mdix_validate(const char *source) ;
// Returns the MdixType discriminant for the value at path, or MdixType::Unknown
// if the path does not exist or the handle is null.
 MdixType mdix_get_type(const void *handle, const char *path) ;
// Returns the element count of an Array or Tuple at path, or -1 if the path
// does not exist, is not a collection, or the handle is null.
 int32_t mdix_get_array_length(const void *handle, const char *path) ;
// Get a string value at path.
// Also returns Date, Timestamp, HexColor, Blob, and Regex values as strings.
// Caller must free the returned string with mdix_free_string().
 char *mdix_get_string(const void *handle, const char *path) ;
// Get a 32-bit integer at path. Also works on Enum paths (returns the integer value).
// Returns 0 on failure; check mdix_get_last_error() to distinguish from a real 0.
 int32_t mdix_get_int(const void *handle, const char *path) ;
// Get a 64-bit integer at path. Also accepts Int values (widened without loss).
// Returns 0 on failure.
 int64_t mdix_get_long(const void *handle, const char *path) ;
// Get a 32-bit float at path. Returns 0.0 on failure.
 float mdix_get_float(const void *handle, const char *path) ;
// Get a 64-bit double at path. Returns 0.0 on failure.
 double mdix_get_double(const void *handle, const char *path) ;
// Get a boolean at path. Returns false on failure.
 bool mdix_get_bool(const void *handle, const char *path) ;
// Returns the enum type name at path (e.g. "WeaponClass").
// Returns null if the path does not exist or is not an enum.
// Caller must free with mdix_free_string().
 char *mdix_get_enum_name(const void *handle, const char *path) ;
// Returns the enum field name at path (e.g. "ASSAULT_RIFLE").
// Returns null if the path does not exist or is not an enum.
// Caller must free with mdix_free_string().
 char *mdix_get_enum_field(const void *handle, const char *path) ;
// Serialize the raw DixValue at path to a JSON string.
//
// Useful for reading Object or Array values wholesale into C# for further
// processing. Note: DixValue::Enum serializes as {"enum_name":...,"value":N}
// via serde — use mdix_get_int on enum paths to get just the integer.
// Caller must free with mdix_free_string().
 char *mdix_get_json(const void *handle, const char *path) ;
// Free a C string returned by any mdix getter function.
// Do NOT call on the static pointer from mdix_version(). Passing null is safe.
 void mdix_free_string(char *s) ;
// Free a string array returned by mdix_get_keys() or mdix_get_all_keys().
// count must match the value written to out_count by the original call.
 void mdix_free_string_array(char **arr, int32_t count) ;
// Returns a pointer to the last error string set on this thread, or null if
// no error is pending. Valid only until the next mdix_* call on this thread.
// Do NOT free this pointer.
 const char *mdix_get_last_error(void) ;