ffi/builds/build_1236/MdixNative.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace MidManStudio.DixScript.Native
{
    internal static unsafe partial class MdixNative
    {
#if UNITY_IOS && !UNITY_EDITOR
        const string __DllName = "__Internal";
#else
        const string __DllName = "mdix_ffi";
#endif
        





        /// <summary>
        ///  Returns a static pointer to the DixScript FFI version string.
        ///  Do NOT pass this pointer to mdix_free_string() — it is a static allocation.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_version();

        /// <summary>
        ///  Load and compile a .mdix source file from disk.
        ///  Returns an opaque handle on success, null on failure (check mdix_get_last_error).
        ///  Caller must free with mdix_free when done.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_load", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_load(byte* path);

        /// <summary>
        ///  Compile and load .mdix source from an in-memory string.
        ///  Useful for Unity TextAssets and embedded configs.
        ///  Returns an opaque handle on success, null on failure.
        ///  Caller must free with mdix_free when done.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_load_str", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_load_str(byte* source);

        /// <summary>
        ///  Free a handle created by any mdix_load* function.
        ///  Passing null is safe. Do not call twice on the same pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_free(void* handle);

        /// <summary>
        ///  Load an encrypted .mdix.enc file using a .mdix.key file for key resolution.
        ///  Pass null for key_path to auto-detect the key file next to the enc file.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_load_encrypted", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_load_encrypted(byte* enc_path, byte* key_path);

        /// <summary>
        ///  Load an encrypted .mdix.enc file using a password for key derivation.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_load_encrypted_password", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_load_encrypted_password(byte* enc_path, byte* password);

        /// <summary>
        ///  Load encrypted data from raw bytes with key file content provided as a string.
        ///  Intended for platforms without filesystem access (asset bundles, network delivery).
        ///  Pass null for password if the key file does not use password mode.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_load_encrypted_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_load_encrypted_bytes(byte* encrypted_bytes, int byte_count, byte* key_file_content, byte* password);

        /// <summary>
        ///  Returns true if the handle is non-null (i.e. load succeeded).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_is_valid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_is_valid(void* handle);

        /// <summary>
        ///  Returns the number of entries in the flat data map, or -1 if handle is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_entry_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int mdix_entry_count(void* handle);

        /// <summary>
        ///  Returns true if the source file was encrypted.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_is_encrypted", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_is_encrypted(void* handle);

        /// <summary>
        ///  Returns true if the source file was compressed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_is_compressed", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_is_compressed(void* handle);

        /// <summary>
        ///  Returns the runtime version string from the loaded DixData.
        ///  Caller must free the returned string with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_loaded_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_loaded_version(void* handle);

        /// <summary>
        ///  Returns all keys in the flat data map as a null-terminated C string array.
        ///  Writes the count to out_count. Caller must free with mdix_free_string_array.
        ///  Includes synthetic indexed keys (tags[0], server.host, etc.).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_all_keys", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte** mdix_get_all_keys(void* handle, int* out_count);

        /// <summary>
        ///  Read a value from the @CONFIG section by key (e.g. "version", "author").
        ///  Returns null if the section is absent or the key does not exist.
        ///  Caller must free the returned string with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_config_value", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_config_value(void* handle, byte* key);

        /// <summary>
        ///  Validate .mdix source text without loading the result.
        ///
        ///  Runs the full compilation pipeline (tokenize → parse → semantic analysis →
        ///  AST enhance → value resolve). Returns true on success; on failure, the
        ///  error detail is available via mdix_get_last_error().
        ///
        ///  Useful for Unity editor tooling — validate before shipping.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_validate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_validate(byte* source);

        /// <summary>
        ///  Returns the MdixType discriminant for the value at path, or MdixType::Unknown
        ///  if the path does not exist or the handle is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_type", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern MdixType mdix_get_type(void* handle, byte* path);

        /// <summary>
        ///  Returns the element count of an Array or Tuple at path, or -1 if the path
        ///  does not exist, is not a collection, or the handle is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_array_length", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int mdix_get_array_length(void* handle, byte* path);

        /// <summary>
        ///  Get a string value at path.
        ///  Also returns Date, Timestamp, HexColor, Blob, and Regex values as strings.
        ///  Caller must free the returned string with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_string(void* handle, byte* path);

        /// <summary>
        ///  Get a 32-bit integer at path. Also works on Enum paths (returns the integer value).
        ///  Returns 0 on failure; check mdix_get_last_error() to distinguish from a real 0.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_int", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int mdix_get_int(void* handle, byte* path);

        /// <summary>
        ///  Get a 64-bit integer at path. Also accepts Int values (widened without loss).
        ///  Returns 0 on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_long", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern long mdix_get_long(void* handle, byte* path);

        /// <summary>
        ///  Get a 32-bit float at path. Returns 0.0 on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern float mdix_get_float(void* handle, byte* path);

        /// <summary>
        ///  Get a 64-bit double at path. Returns 0.0 on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern double mdix_get_double(void* handle, byte* path);

        /// <summary>
        ///  Get a boolean at path. Returns false on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_bool", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_get_bool(void* handle, byte* path);

        /// <summary>
        ///  Returns the enum type name at path (e.g. "WeaponClass").
        ///  Returns null if the path does not exist or is not an enum.
        ///  Caller must free with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_enum_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_enum_name(void* handle, byte* path);

        /// <summary>
        ///  Returns the enum field name at path (e.g. "ASSAULT_RIFLE").
        ///  Returns null if the path does not exist or is not an enum.
        ///  Caller must free with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_enum_field", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_enum_field(void* handle, byte* path);

        /// <summary>
        ///  Serialize the raw DixValue at path to a JSON string.
        ///
        ///  Useful for reading Object or Array values wholesale into C# for further
        ///  processing. Note: DixValue::Enum serializes as {"enum_name":...,"value":N}
        ///  via serde — use mdix_get_int on enum paths to get just the integer.
        ///  Caller must free with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_json(void* handle, byte* path);
